<resources>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="sunday">SUN</string>

    <string-array name="month_names">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <!--<string-array name="month_names_fi">-->
    <!--<item>Tammikuu</item>-->
    <!--<item>Helmikuu</item>-->
    <!--<item>Maaliskuu</item>-->
    <!--<item>Huhtikuu</item>-->
    <!--<item>Toukokuu</item>-->
    <!--<item>Kesäkuu</item>-->
    <!--<item>Heinäkuu</item>-->
    <!--<item>Elokuu</item>-->
    <!--<item>Syyskuu</item>-->
    <!--<item>Lokakuu</item>-->
    <!--<item>Marraskuu</item>-->
    <!--<item>Joulukuu</item>-->
    <!--</string-array>-->

    <string name="exit_double_click">Please click BACK again to exit</string>

    <string name="app_name">KCalCulator</string>
    <string name="title_home">Home</string>
    <string name="title_data">Data</string>
    <string name="title_chart">Charts</string>
    <string name="title_settings">Settings</string>
    <string name="date">Date</string>
    <string name="spent">Spent</string>
    <string name="eaten">Eaten</string>
    <string name="weight">Weight</string>
    <string name="kcal_difference">Difference</string>
    <string name="kcal_difference_percent">Difference %</string>
    <string name="kday">K.Day</string>
    <string name="today">Today</string>
    <string name="week">WEEK:</string>
    <string name="empty"></string>
    <string name="kcal">KCAL</string>
    <string name="todo">TODO</string>
    <string name="kg">KG</string>
    <string name="save">Save</string>
    <string name="saved">Saved</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm_db_clear_title">Confirm database delete</string>
    <string name="confirm_db_clear_msg">You are about to delete all records of database. Do you really want to proceed
        ?
    </string>
    <string name="db_clear_successful">Database cleared</string>
    <string name="export_successful">Export successful</string>
    <string name="select_import_file">Select file to import</string>
    <string name="export_title">Export</string>
    <string name="export_text">Export data from Database to CSV file</string>
    <string name="import_title">Import</string>
    <string name="import_text">Import data from CSV into Database. Local data will be overwritten.</string>
    <string name="clear_db">Clear Database</string>
    <string name="clear_db_text">Delete all records from local Database</string>
    <string name="title_activity_settings">Settings</string>
    <string name="loading">Loading…</string>





</resources>
