<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_navigation_home_24dp"
            android:title="@string/title_home"/>
    <item
            android:id="@+id/navigation_chart"
            android:icon="@drawable/ic_navigation_charts_24px"
            android:title="@string/title_chart"/>

    <item
            android:id="@+id/navigation_data"
            android:icon="@drawable/ic_navigation_data_24px"
            android:title="@string/title_data"/>

    <item
            android:id="@+id/navigation_settings"
            android:icon="@drawable/ic_navigation_settings_24dp"
            android:title="@string/settings"/>

</menu>
