<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TextView
            android:text="@string/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/data_header"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/data_header2" android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"/>
    <TextView
            android:text="@string/spent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/data_header2"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/data_header" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/data_header3"
            android:layout_marginStart="2dp" android:layout_marginEnd="2dp"/>
    <TextView
            android:text="@string/eaten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/data_header3"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/data_header2" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/data_header4"
            android:layout_marginStart="2dp" android:layout_marginEnd="2dp"/>
    <TextView
            android:text="@string/weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/data_header4"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/data_header3" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/data_header5"
            android:layout_marginStart="2dp" android:layout_marginEnd="2dp"/>
    <TextView
            android:text="@string/kcal_difference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/data_header5"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/data_header4" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/data_header6"
            android:layout_marginStart="2dp" android:layout_marginEnd="2dp"/>
    <TextView
            android:text="@string/kcal_difference_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/data_header6"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/data_header5" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/data_header7"
            android:layout_marginStart="2dp" android:layout_marginEnd="2dp"/>
    <TextView
            android:text="@string/kday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/data_header7"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/data_header6" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="2dp" android:layout_marginEnd="2dp"/>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/data_header">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical"/>
    </ScrollView>
</android.support.constraint.ConstraintLayout>