<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content" android:id="@+id/main_l">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/spent_icon"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="64dp"
            app:layout_constraintTop_toTopOf="@+id/spentInputLayout"
            app:layout_constraintBottom_toBottomOf="@+id/spentInputLayout"
            android:contentDescription="@string/todo" android:layout_marginTop="8dp"/>

    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/spent_icon" android:id="@+id/spentInputLayout"
            android:layout_marginEnd="88dp">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/wednesday"/>
    </android.support.design.widget.TextInputLayout>


    <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kcal"
            android:layout_centerVertical="true" android:layout_alignParentEnd="true"
            app:layout_constraintBottom_toBottomOf="@+id/spentInputLayout" android:layout_marginBottom="16dp"
            app:layout_constraintEnd_toEndOf="@+id/spentInputLayout" android:layout_marginEnd="8dp"/>


</android.support.constraint.ConstraintLayout>