<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent" android:id="@+id/home_root_layout">


    <semyking.kcalculator.views.CustomCollapsibleCalendar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/calendarView"
            app:layout_constraintTop_toTopOf="parent">
    </semyking.kcalculator.views.CustomCollapsibleCalendar>
    <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/difference_layout"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/spent_eaten_layout"
    >

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/d2"
                android:text="@string/kcal_difference_percent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/difference_percent_TV"
                app:layout_constraintStart_toEndOf="@+id/d1"
                android:gravity="center"/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/d1" app:layout_constraintStart_toStartOf="parent"
                android:text="@string/kcal_difference"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/difference_TV"
                app:layout_constraintEnd_toStartOf="@+id/d2"
                android:gravity="center"/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/difference_TV" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/difference_percent_TV"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="4dp"
                android:gravity="center"/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/difference_percent_TV"
                app:layout_constraintStart_toEndOf="@+id/difference_TV"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="4dp" android:gravity="center"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/spent_eaten_layout"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/weight_kday_layout">

        <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="4dp"
                android:id="@+id/spentInputLayout"
                app:layout_constraintEnd_toStartOf="@+id/eatenInputLayout"
                android:layout_marginEnd="4dp"
                app:layout_constraintStart_toStartOf="parent">

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/spent" android:id="@+id/spent_EditText"
                    android:imeOptions="actionNext"
                    android:nextFocusForward="@+id/eaten_EditText"
                    android:inputType="numberDecimal" android:selectAllOnFocus="true" android:layout_marginLeft="56dp"/>
        </android.support.design.widget.TextInputLayout>
        <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/spent_icon"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/spentInputLayout"
                android:contentDescription="@string/spent"
                app:srcCompat="@drawable/ic_sport" android:layout_marginTop="8dp"/>


        <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kcal"
                android:layout_centerVertical="true" android:layout_alignParentEnd="true"
                app:layout_constraintBottom_toBottomOf="@+id/spentInputLayout" android:layout_marginBottom="16dp"
                app:layout_constraintEnd_toEndOf="@+id/spentInputLayout" android:layout_marginEnd="4dp"
        />
        <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="4dp"
                android:id="@+id/eatenInputLayout"
                app:layout_constraintStart_toEndOf="@+id/spentInputLayout"
                android:layout_marginStart="4dp"
                app:layout_constraintEnd_toEndOf="parent">

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/eaten" android:id="@+id/eaten_EditText"
                    android:imeOptions="actionNext"
                    android:nextFocusForward="@+id/weight_EditText"
                    android:inputType="numberDecimal" android:selectAllOnFocus="true"
                    android:layout_marginRight="56dp"/>
        </android.support.design.widget.TextInputLayout>

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/ic_lunch_box"
                android:id="@+id/eaten_icon"
                android:contentDescription="@string/eaten"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
        <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kcal"
                android:layout_centerVertical="true" android:layout_alignParentEnd="true"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
                app:layout_constraintEnd_toStartOf="@+id/eaten_icon"
                android:layout_marginEnd="6dp"/>


    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
            android:layout_height="wrap_content" android:id="@+id/weight_kday_layout"
            android:layout_width="0dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="24dp">

        <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/weight_icon"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/weightInputLayout"
                android:contentDescription="@string/spent"
                app:srcCompat="@drawable/ic_weight" android:layout_marginTop="8dp" android:elevation="10dp"/>
        <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kg"
                android:layout_centerVertical="true" android:layout_alignParentEnd="true"
                app:layout_constraintBottom_toBottomOf="@+id/weightInputLayout" android:layout_marginBottom="16dp"
                app:layout_constraintEnd_toEndOf="@+id/weightInputLayout" android:layout_marginEnd="4dp"/>
        <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
                android:id="@+id/weightInputLayout"
                app:layout_constraintEnd_toStartOf="@+id/kdayInputLayout"
                android:layout_marginEnd="4dp"
                app:layout_constraintStart_toStartOf="parent">

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/weight" android:id="@+id/weight_EditText"
                    android:imeOptions="actionNext"
                    android:nextFocusForward="@+id/kday_EditText"
                    android:inputType="numberDecimal" android:selectAllOnFocus="true" android:layout_marginLeft="56dp"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
                android:id="@+id/kdayInputLayout"
                app:layout_constraintStart_toEndOf="@+id/weightInputLayout"
                android:layout_marginStart="4dp"
                app:layout_constraintEnd_toEndOf="parent">

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/kday" android:id="@+id/kday_EditText"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal" android:selectAllOnFocus="true"
                    android:layout_marginRight="56dp"/>
        </android.support.design.widget.TextInputLayout>

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/ic_kday"
                android:id="@+id/kday_icon"
                android:contentDescription="@string/eaten"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>


    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>